--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -115,7 +115,12 @@ Hare image copyright 2013 D. Gordon E. Robonson, CC-BY SA 2.0}
 \begin{minipage}[t]{0.3\textwidth}
 \mbox{ }
 \vspace*{0.5in}
-\hfill \includegraphics[width=0.8\textwidth]{img/volterra-orbit.jpg}
+\mbox{ } \hfill
+\includegraphics[width=0.8\textwidth]{img/volterra-orbit.jpg}
+\\[-8pt]
+\mbox{ }
+\hfill
+\includegraphics[width=0.8\textwidth]{img/hare-lynx-pelts-2.png}
 \end{minipage}
 \vfill
 \hfill
@@ -178,6 +183,29 @@ $z^{\mathrm{init}}$}
 $\epsilon_{n,k} \sim \mathsf{Normal}(0, \sigma_k)$}
 \end{itemize}
 
+
+\sld{L-V in Stan (solution to ODE)}
+%
+\begin{itemize}
+\item Define variables for populations predicted by ode, given
+\begin{subitemize}
+\item system function (\code{dz\_dt}), initial populations (\code{z0})
+\item initial time (\code{0}), solution times (\code{ts})
+\item parameters (\code{theta}), data arrays (unused)
+\item tolerances (\code{1e-6}, \code{1-e5}), iterations (\code{1e3})
+\end{subitemize}
+\end{itemize}
+{\small
+\begin{stancode}
+transformed parameters {
+  real z[N, 2]
+    = integrate_ode_rk45(dz_dt, z0, 0, ts, theta,
+                         rep_array(0.0, 0), rep_array(0, 0),
+                         1e-6, 1e-5, 1e3);
+}
+\end{stancode}
+}
+
 \sld{L-V in Stan (data, parameters)}
 \begin{itemize}
 \item Variables for known constants, observed data
@@ -203,27 +231,27 @@ parameters {
 }
 \end{itemize}
 
-\sld{L-V in Stan (solution to ODE)}
+\sld{L-V in Stan (priors, likelihood)}
 %
-\begin{itemize}
-\item Define variables for populations predicted by ode, given
-\begin{subitemize}
-\item system function (\code{dz\_dt}), initial populations (\code{z0})
-\item initial time (\code{0}), solution times (\code{ts})
-\item parameters (\code{theta}), data arrays (unused)
-\item tolerances (\code{1e-6}, \code{1-e5}), iterations (\code{1e3})
-\end{subitemize}
-\end{itemize}
-{\small
+\\
+\spc
 \begin{stancode}
-transformed parameters {
-  real z[N, 2]
-    = integrate_ode_rk45(dz_dt, z0, 0, ts, theta,
-                         rep_array(0.0, 0), rep_array(0, 0),
-                         1e-6, 1e-5, 1e3);
+model {
+  // priors
+  sigma ~ lognormal(0, 0.5);
+  theta[{1, 3}] ~ normal(1, 0.5);
+  theta[{2, 4}] ~ normal(0.05, 0.05);
+
+  z0[1] ~ lognormal(log(30), 5);
+  z0[2] ~ lognormal(log(5), 5);
+
+  // likelihood (lognormal)
+  for (k in 1:2) {
+    y0[k] ~ lognormal(log(z0[k]), sigma[k]);
+    y[ , k] ~ lognormal(log(z[, k]), sigma[k]);
+  }
 }
 \end{stancode}
-}
 
 
 \sld{\Large Lotka-Volterra Fit (vs. training data)}
